[project]
name = "rule-based-snoring-detection"
version = "0.1.0"
description = "Rule-based snoring detection algorithm prototype"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.3",
    "librosa>=0.11.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "python-multipart>=0.0.20",
    "scipy>=1.16.3",
    "soundfile>=0.13.1",
    "streamlit>=1.51.0",
    "uvicorn>=0.38.0",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["lib"]

[tool.uv.sources]
rule-based-snoring-detection = { workspace = true }

[dependency-groups]
dev = [
    "rule-based-snoring-detection",
]
